--- a/.gitignore
+++ b/.gitignore
@@ -2,23 +2,41 @@
 node_modules/
 .pnp
 .pnp.js
+.yarn/cache
+.yarn/unplugged
+.yarn/build-state.yml
+.yarn/install-state.gz
 
-# Testing
-coverage/
-*.log
-
-# Production
-build/
+# Build outputs
 dist/
+build/
 .next/
 out/
+.vite/
 
-# Environment variables
+# Environment
 .env
 .env.local
-.env.development.local
-.env.test.local
-.env.production.local
+.env.*.local
+
+# Logs
+logs/
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+# OS
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+Desktop.ini
 
 # IDE
 .vscode/
@@ -26,11 +44,17 @@ out/
 *.swp
 *.swo
 *~
+.project
+.classpath
+.settings/
 
-# OS
-.DS_Store
-Thumbs.db
+# Testing
+coverage/
+.nyc_output/
+*.lcov
 
 # Misc
 *.tsbuildinfo
 .cache/
+.turbo/
+.vercel
