--- a/packages/ai/package.json
+++ b/packages/ai/package.json
@@ -4,8 +4,7 @@
   "type": "module",
   "main": "./dist/index.js",
   "exports": {
-    ".": "./dist/index.js",
-    "./src/*": "./src/*"
+    ".": "./dist/index.js"
   },
   "scripts": {
     "build": "tsup src/index.ts --format esm --dts --outDir dist",
