feat(api): local-only admin inbox access for debug-user (pilot safe)
- add API-side bypass for admin inbox when ALLOW_DEBUG_USER is enabled
- keep db layer env-agnostic
- prevent 500s on admin access checks (fallback to 403)
- document local/pilot usage in env example

--- a/.env.example
+++ b/.env.example
@@ -21,3 +21,7 @@ META_VERIFY_TOKEN=frostdesk_verify_2026
 # AI Emergency Kill Switch
 # Set to "true" to disable AI globally (absolute priority over DB flags)
 # AI_EMERGENCY_DISABLE=true
+
+# Local/Pilot only
+# ALLOW_DEBUG_USER=1 enables debug-user access to admin inbox
+# ALLOW_DEBUG_USER=1
