--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -9,7 +9,8 @@
     "start": "node dist/index.js"
   },
   "dependencies": {
-    "@frostdesk/db": "*",
+    "@frostdesk/ai": "workspace:*",
+    "@frostdesk/db": "workspace:*",
     "@fastify/rate-limit": "^9.1.0",
     "dotenv": "^16.3.1",
     "fastify": "^4.24.3",
