--- a/.env.example
+++ b/.env.example
@@ -8,7 +8,7 @@ DATABASE_URL=postgresql://postgres:Frostdesk2025!@db.fggheegqtghedvibisma.supaba
 OPENAI_API_KEY=your_openai_api_key
 
 # Database
-DATABASE_URL=postgresql://user:password@localhost:5432/dbname
+# DATABASE_URL=postgresql://user:password@localhost:5432/dbname
 
 # WhatsApp Cloud API (human-triggered outbound only)
 # Required for: approve draft, manual send (POST /webhook/whatsapp uses same token for inbound ack if needed)
