--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "frostdesk-core",
   "version": "0.1.0",
   "private": true,
+  "packageManager": "pnpm@10.29.3",
   "description": "Core repository for Frostdesk project",
   "workspaces": [
     "apps/*",
@@ -23,6 +24,7 @@
     "@supabase/supabase-js": "^2.45.0",
     "dotenv": "^16.6.1",
     "resolve-pkg-maps": "^1.0.0",
+    "tsup": "^8.0.1",
     "tsx": "^4.21.0"
   }
 }
