--- a/apps/instructor/vercel.json
+++ b/apps/instructor/vercel.json
@@ -1,5 +1,5 @@
 {
   "installCommand": "cd ../.. && corepack enable && pnpm install --frozen-lockfile",
-  "buildCommand": "cd ../.. && pnpm --filter @frostdesk/admin build",
+  "buildCommand": "cd ../.. && pnpm --filter @frostdesk/instructor build",
   "outputDirectory": ".next"
 }
