--- a/.env.example
+++ b/.env.example
@@ -76,13 +76,14 @@ ENABLE_AI_USAGE_TELEMETRY=1
 # Next.js apps (admin, instructor): set NEXT_PUBLIC_SENTRY_DSN
 # NEXT_PUBLIC_SENTRY_DSN=https://...@sentry.io/...
 
-# ── Google Calendar OAuth (per-instructor calendar sync) ─────────────────
-# Required for: creating/updating/deleting events on instructor's Google Calendar
-# when bookings are confirmed/modified/cancelled.
-# Get credentials at https://console.cloud.google.com/ → APIs & Services → Credentials
-# GOOGLE_CLIENT_ID=your_google_client_id.apps.googleusercontent.com
-# GOOGLE_CLIENT_SECRET=your_google_client_secret
-# GOOGLE_REDIRECT_URI=http://localhost:3000/auth/callback/google
+# ── Google Calendar OAuth (per-instructor calendar connection) ───────────
+# Each instructor connects their own Google Calendar; busy times are synced and excluded from availability.
+# Google Cloud: enable Calendar API, create OAuth 2.0 Client (Web), set redirect URI to API callback.
+# GOOGLE_CLIENT_ID=<client-id>.apps.googleusercontent.com
+# GOOGLE_CLIENT_SECRET=<client-secret>
+# GOOGLE_CALENDAR_REDIRECT_URI=https://frostdeskapi-production.up.railway.app/instructor/calendar/oauth/callback
+# GOOGLE_OAUTH_STATE_SECRET=<generate with: openssl rand -hex 32>
+# Optional: API_PUBLIC_URL (used to build redirect URI if GOOGLE_CALENDAR_REDIRECT_URI not set)
 
 # Local/Pilot only
 # ALLOW_DEBUG_USER=1 enables debug-user access to admin inbox
