--- a/apps/instructor/.eslintrc.json
+++ b/apps/instructor/.eslintrc.json
@@ -32,11 +32,7 @@
     },
     {
       "files": ["app/**/*.tsx", "app/**/*.ts"],
-      "excludedFiles": [
-        "**/*client*",
-        "**/*.client.ts",
-        "**/*.client.tsx"
-      ],
+      "excludedFiles": ["**/*client*", "**/*.client.ts", "**/*.client.tsx", "**/page.tsx"],
       "rules": {
         "no-restricted-imports": [
           "error",
