chore: env docs, startup_checks, CalendarConnectionPanel, not-authorized, package.json
Made-with: Cursor

--- a/.env.example
+++ b/.env.example
@@ -23,12 +23,12 @@ META_VERIFY_TOKEN=<your-verify-token>
 # META_WHATSAPP_VERIFY_TOKEN=<same-as-meta-verify-token-field>
 
 # Meta webhook POST signature (App Secret; used to verify X-Hub-Signature-256 on /webhook/whatsapp)
+# Set either META_WHATSAPP_APP_SECRET or META_APP_SECRET; both are accepted by the API and startup check.
 META_WHATSAPP_APP_SECRET=<your-meta-app-secret>
 
-# Meta App Secret (for webhook signature verification — X-Hub-Signature-256)
-# Get it from Meta Developer Console → App → Settings → Basic → App Secret
-# Required in production; without it, POST /webhook/whatsapp returns 500.
-# In dev only: set SKIP_WHATSAPP_SIGNATURE_VERIFY=1 to bypass.
+# Meta App Secret (same as above — alternative name; either this or META_WHATSAPP_APP_SECRET is required in production)
+# Get it from Meta Developer Console → App → Settings → Basic → App Secret.
+# Without either secret, POST /webhook/whatsapp returns 500. In dev only: set SKIP_WHATSAPP_SIGNATURE_VERIFY=1 to bypass.
 META_APP_SECRET=<app-secret-from-meta-developer-console>
 
 # AI Emergency Kill Switch
